# rukaku-auth

./: README.md
backend/: .env  Cargo.toml
backend/src/: app.rs  auth.rs  main.rs  telegram_bot.rs  websocket.rs
frontend/: .gitignore  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/static/fonts/Roboto/: stylesheet.css
frontend/src/: essential.ts  index.ts  migrate.ts  polyfills.ts
frontend/src/app/: App.scss  AppRoot.tsx  calc.ts  cat.ts  schema.ts
frontend/src/app/inflator/: custom-attributes.ts  inflator.ts
frontend/src/app/navigation/: Link.tsx  entrypoint.tsx
frontend/src/app/router/: file-router.ts
frontend/src/assets/scss/: _colors.scss  _mixins.scss  _vars.scss  base.scss  shiki.scss  table.scss
