[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.20.0", features = ["v4"] }
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
teloxide = { version = "0.17.0", features = ["macros", "ctrlc_handler"] }
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3.31"
dotenv = "0.15.0"
governor = "0.10.4"
nonzero_ext = "0.3.0"
rand = "0.10.0"
tower-http = { version = "0.6.8", features = ["fs"] }
